# ladybirds

./: CMakeLists.txt  LICENSE.TXT  README.md  codingstyle.md
doc/codegen/: README.md
doc/codegen/lpc/: AutomaticGeneratedVariables.c.mustache  AutomaticGeneratedVariables.h.mustache  Functionpointers_M0.c.mustache  Functionpointers_M0.h.mustache  Functionpointers_M4.c.mustache  Functionpointers_M4.h.mustache  buffers.c.mustache  buffers.h.mustache  dependency_matrix.lua.mustache  dependency_structure.c.mustache  dependency_structure.h.mustache  external_files.lua  kernels_lpc.h.mustache  main.lua  mapping.lua.mustache  orderTasksOneCore.txt.mustache
doc/codegen/lpc/standard_M0/: ladybirds.h
doc/codegen/lpc/standard_M4/: SharedStruct.h
doc/codegen/mppa_bare/: buffers.h.mustache  buffers.ld.mustache  events.h.mustache  global.h.mustache  main.lua  platform.lua  taskmanagement.h.mustache
doc/codegen/mppa_bare/lb-includes/: ladybirds.h.mustache
doc/codegen/mppa_bare/report/: mapping.lua.mustache
examples/canny/: canny.lb  conf.h  mapping1.lua  mapping2.lua  projinfo.lua
examples/matmult/: conf.h  mapping.lua  matmult.lb  projinfo.lua
examples/ultrasound2d/: bf.lb  constants.h  mapping.lua  projinfo.lua
res/codegen/DAL/: Makefile.mustache  configure.mustache  fsm.xml.mustache  main.lua  mapping.xml.mustache
res/codegen/DAL/app1/: mapping1.xml.mustache  pn.xml.mustache
res/codegen/DAL/app1/src/: buffers.h.mustache  experiment.c.mustache  experiment.cpp.mustache  experiment.h.mustache  global.h.mustache  process.c.mustache  process.h.mustache
res/codegen/common/: buffers.lua.mustache  init.lua  report.html.mustache
res/codegen/graphviz/: Makefile.mustache  main.lua  metakernel.dot.mustache
res/codegen/mppa_pthreads/: Makefile.mustache  buffers.h.mustache  events.h.mustache  experiment.c.mustache  global.h.mustache  main.c.mustache  main.lua  taskmanagement.c.mustache  taskmanagement.h.mustache  thread.c.mustache
res/codegen/mppa_pthreads/lb-includes/: ladybirds.h.mustache
res/codegen/pthreads-dynamic/: Makefile.mustache  buffers.h.mustache  events.c.mustache  experiment.h.mustache  global.h.mustache  main.c.mustache  main.lua  taskmanagement.c.mustache  taskmanagement.h.mustache  thread.c.mustache
res/codegen/pthreads-dynamic/lb-includes/: ladybirds.h.mustache
res/codegen/single/: Makefile.mustache  experiment.c.mustache  experiment.h.mustache  global.h.mustache  main.c.mustache  main.lua
res/codegen/single/lb-includes/: ladybirds.h.mustache
res/codegen/templates/: main.lua  mapping.template.lua.mustache
res/include/: ladybirds.h
src/: basetype.cpp  basetype.h  buffer.cpp  buffer.h  cmdlineoptions.cpp  cmdlineoptions.h  dependency.cpp  dependency.h  diophant.cpp  diophant.h  gen.h  global.h  kernel.cpp  kernel.h  loadstore.cpp  loadstore.h  main.cpp  metakernel.cpp  metakernel.h  metakernelseq.cpp  metakernelseq.h  msgui.cpp  msgui.h  packet.cpp  packet.h  program.cpp  program.h  range.cpp  range.h  simplearray.h  spacedivision.h  task.cpp  task.h  taskgroup.cpp  taskgroup.h  tools.cpp  tools.h
src/graph/: edge.h  edgeregister.h  graph-dump.h  graph-extra.h  graph.h  itemmap.cpp  itemmap.h  itemmap.inc  itemset.cpp  itemset.h  itemset.inc  node.h  presdeque.h  presdeque.inc
src/graph/internal/: basechecker.h  basechecker.inc
src/lua/: luadump.cpp  luadump.h  luaenv.cpp  luaenv.h  luainterface.h  luaload.cpp  luaload.h  methodinterface.cpp  methodinterface.h  pass.cpp  pass.h
src/opt/: bankassignment.cpp  bankassignment.h  cacheindexopt.cpp  cacheindexopt.h  common.h  ifaceassignment.cpp  ifaceassignment.h  insertionschedule.cpp  insertionschedule.h  schedule.cpp  schedule.h
src/parse/: annotatingrewriter.cpp  annotatingrewriter.h  cinterface.cpp  cinterface.h  clanghandler-kernelcallparser.cpp  clanghandler-kernelcallparser.h  clanghandler-metakernel.cpp  clanghandler.cpp  clanghandler.h  clanghandlerfactory.h  exprcmp.cpp  exprcmp.h  state-eval.cpp  state-eval.h
src/parse/clang-code/: README.md
src/passes/: arraymerger.cpp  assignbanks.cpp  bufferallocation.cpp  bufferpreallocation.cpp  export.cpp  loadaccesses.cpp  loadcost.cpp  loadmapping.cpp  loadprojectinfo.cpp  mergeports.cpp  parse.cpp  platform.cpp  populategroups.cpp  stupidbankassign.cpp  succmatrix.cpp  tasktoposort.cpp  tools.cpp  transient.cpp
src/spec/: platform.cpp  platform.h
